# Nielsen

./: .coveragerc  .gitignore  .gitlab-ci.yml  .travis.yml  ARCHITECTURE.md  Makefile  Pipfile  README.md  config.py  nielsen.ini  nielsen.py  pyproject.toml  requirements.txt  setup.py  test.py  titles.py
.github/workflows/: tests.yml
fixtures/: config.ini
nielsen/: __init__.py  api.py  config.py  fetcher.py  files.py  logging.py  media.py  nielsen.py  processor.py  test.py  titles.py  tv.py  version.py
tests/: conftest.py  test_config.py  test_media.py  test_mlstripper.py  test_processor.py  test_tv.py  test_tvmaze.py
tests/integration/: test_tvmaze.py
