[tool.poetry]
authors = ["Michael \"Irish\" O'Neill <irish.dot@gmail.com>"]
classifiers = [
	'License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)',
	'Operating System :: POSIX :: Linux',
	'Operating System :: Unix',
	'Programming Language :: Python :: 3 :: Only',
	'Programming Language :: Python :: 3.11',
	'Topic :: Communications :: File Sharing',
	'Topic :: Multimedia :: Video',
	'Topic :: Multimedia',
	'Topic :: System :: Archiving',
	'Topic :: Utilities',
	'Typing :: Typed',
]
description = "Organize your digital media collections."
documentation = "https://github.com/IrishPrime/Nielsen/wiki"
homepage = "http://irishprime.github.io/Nielsen/"
keywords = ["metadata", "tv", "renamer"]
license = "GPL-3.0-or-later"
name = "nielsen"
readme = "README.md"
repository = "https://github.com/IrishPrime/Nielsen/"
version = "3.0.0"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.0"
rich = "^13.3.3"
typer = "^0.9.0"

[tool.poetry.group.dev.dependencies]
black = "^23.0"
coverage = "^7.0"
mypy = "^1.0"
pytest = "^7.4"
types-requests = "^2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
nielsen = "nielsen.bin.cli.main:main"
pickler = "nielsen.bin.pickler:main"

[tool.poetry.extras]
rich = ["rich"]
