[project]
authors = [
    { name = "Michael \"Irish\" O'Neill", email = "irish.dot@gmail.com" }
]
classifiers = [
	'License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)',
	'Operating System :: POSIX :: Linux',
	'Operating System :: Unix',
	'Programming Language :: Python :: 3 :: Only',
	'Programming Language :: Python :: 3.12',
	'Topic :: Communications :: File Sharing',
	'Topic :: Multimedia :: Video',
	'Topic :: Multimedia',
	'Topic :: System :: Archiving',
	'Topic :: Utilities',
	'Typing :: Typed',
]
dependencies = [
    "requests>=2.32.3",
    "typer>=0.15.1",
]
description = "Organize your digital media collections."
documentation = "https://github.com/IrishPrime/Nielsen/wiki"
homepage = "http://irishprime.github.io/Nielsen/"
keywords = ["metadata", "tv", "renamer"]
license = "GPL-3.0-or-later"
name = "nielsen"
readme = "README.md"
repository = "https://github.com/IrishPrime/Nielsen/"
requires-python = ">=3.12"
version = "3.1.6"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "coverage>=7.6.10",
    "mypy>=1.14.1",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "types-requests>=2.32.0.20241016",
]

[project.scripts]
nielsen = "nielsen.bin.cli.main:main"

[tool.pytest.ini_options]
addopts = "-ra --import-mode=importlib --cov=nielsen --cov-report=html --cov-report=term"

[tool.coverage.run]
branch = true
parallel = true

[tool.coverage.report]
show_missing = true
skip_empty = true
omit = ["nielsen/bin/*"]
exclude_also = [
	# Don't complain if tests don't hit defensive assertion code:
	"raise AssertionError",

	# Don't complain if non-runnable code isn't run:
	"if 0:",
	"if False:",
	"if __name__ == .__main__.:",

	# Don't complain about abstract methods, they aren't run:
	"@(abc\\.)?abstractmethod",
	"\\.\\.\\.",
]
